# tiny-whispr

./: .gitignore  README.md  build.bat  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-03-12-tinywhispr-implementation.md
docs/superpowers/specs/: 2026-03-12-tinywhispr-design.md
scripts/: generate_icons.py
src/: App.svelte  app.css  overlay.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  db.rs  hotkey.rs  lib.rs  main.rs  output.rs  settings.rs  transcribe.rs  tray.rs
src/indicator/: IndicatorApp.svelte  indicator-main.ts  indicator.html
src/lib/: types.ts
src/lib/components/: History.svelte  HistoryItem.svelte  Settings.svelte  TabBar.svelte
src/lib/stores/: history.ts  recording.ts  settings.ts
