[package]
name = "tinywhispr"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
rubato = "0.16"
reqwest = { version = "0.12", features = ["multipart", "json"] }
enigo = "0.2"
arboard = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
dirs = "5"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
